remove js files and fix APIs